@@ -21,14 +21,12 @@ exports.InvalidRequestBodyError = InvalidRequestBodyError;
 /**
  * Creates and runs a server for the given `app` using `opts` (see
  * createServer). Registers the given `callback` on the "listening" event of the
- * server that is created. The `opts` may contain any of the following
- * properties:
+ * server that is created. The `opts` object may contain any properties used to
+ * create the server (see `strata.createServer`) and the following:
  *
  *   - host     The host name to accept connections on (defaults to INADDR_ANY)
  *   - port     The port to listen on (defaults to 1982)
  *   - socket   Unix socket file to listen on (trumps host/port)
- *   - key      Private key to use for SSL (HTTPS only)
- *   - cert     Public X509 certificate to use (HTTPS only)
  */
 function run(app, opts, callback) {
     opts = opts || {};
@@ -38,14 +36,7 @@ function run(app, opts, callback) {
         opts = null;
     }
 
-    opts.port = opts.port || 1982;
-
-    var server;
-    if (opts.key && opts.cert) {
-        server = createServer(app, {key: opts.key, cert: opts.cert});
-    } else {
-        server = createServer(app);
-    }
+    var server = createServer(app, opts);
 
     server.on("listening", function () {
         console.log(">> Strata web server version " + exports.version.join("."));
@@ -69,7 +60,7 @@ function run(app, opts, callback) {
     if (opts.socket) {
         server.listen(opts.socket);
     } else {
-        server.listen(opts.port, opts.host);
+        server.listen(opts.port || 1982, opts.host);
     }
 
     return server;
@@ -82,11 +73,14 @@ function run(app, opts, callback) {
  *
  *   - key      Private key to use for SSL (HTTPS only)
  *   - cert     Public X509 certificate to use (HTTPS only)
+ *   - name     The name of the server
  *
  * The `app` should be a valid Strata app (see the SPEC), or an object that has
  * a `toApp` function that returns one (e.g. a strata.Builder).
  */
 function createServer(app, opts) {
+    opts = opts || {};
+
     // The app may be any object that has a toApp method (e.g. a Builder).
     if (typeof app.toApp == "function") {
         app = app.toApp();
@@ -96,25 +90,23 @@ function createServer(app, opts) {
         throw new StrataError("App must be a function");
     }
 
-    var server;
-    if (typeof opts == "object") {
-        server = https.createServer(opts);
-    } else {
-        server = http.createServer();
-    }
-
-    var protocol;
-    if (["yes", "on", "1"].indexOf(process.env.HTTPS) != -1) {
+    var server, protocol;
+    if (opts.key && opts.cert) {
+        server = https.createServer({key: opts.key, cert: opts.cert});
         protocol = "https:";
     } else {
-        protocol = (server instanceof https.Server) ? "https:" : "http:";
+        server = http.createServer();
+        protocol = "http:";
     }
 
-    server.on("request", function handleRequest(req, res) {
+    var serverName, serverPort;
+    server.on("listening", function () {
         var addr = server.address();
-        var serverName = process.env.SERVER_NAME || addr.address;
-        var serverPort = (parseInt(process.env.SERVER_PORT, 10) || addr.port).toString(10);
+        serverName = opts.name || process.env.SERVER_NAME || addr.address;
+        serverPort = (addr.port || "").toString();
+    });
 
+    server.on("request", function handleRequest(req, res) {
         var uri = url.parse(req.url);
 
         var env = makeEnv({
@@ -170,7 +162,7 @@ function createServer(app, opts) {
  *   - requestMethod        The request method (e.g. "GET" or "POST")
  *   - requestTime          A Date that indicates the time the request was received
  *   - serverName           The host name of the server
- *   - serverPort           The port number the request was made on
+ *   - serverPort           The port number the server is listening on
  *   - scriptName           The virtual location of the application
  *   - pathInfo             The path of the request
  *   - queryString          The query string
@@ -188,7 +180,7 @@ function makeEnv(opts) {
     env.requestMethod = (opts.requestMethod || "GET").toUpperCase();
     env.requestTime = opts.requestTime || new Date;
     env.serverName = opts.serverName || "";
-    env.serverPort = opts.serverPort || (env.protocol == "https:" ? "443" : "80");
+    env.serverPort = opts.serverPort || "";
     env.scriptName = opts.scriptName || "";
     env.pathInfo = opts.pathInfo || "";
     env.queryString = opts.queryString || "";
