@@ -146,9 +146,11 @@ Request.prototype.__defineGetter__("hostWithPort", function hostWithPort() {
         return parts[parts.length - 1];
     } else if (this.env.httpHost) {
         return this.env.httpHost;
+    } else if (this.env.serverPort) {
+        return this.env.serverName + ":" + this.env.serverPort;
     }
 
-    return this.env.serverName + ":" + this.env.serverPort;
+    return this.env.serverName;
 });
 
 /**
